add cache for wms layers